# Mosaic-Desktop

./: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  todo-prompt-templates.md  todo.md  tsconfig.e2e.json  vitest.config.ts
docs/: 01_system_design.md  (+23 more)
src-tauri/: .codexpolicy  Cargo.toml  example.codexpolicy  tauri.conf.json
src-tauri/.playwright-mcp/: page-2026-04-09T06-47-16-619Z.yml
src-tauri/capabilities/: default.json
src-tauri/fuzz/: Cargo.toml
src-tauri/fuzz/fuzz_targets/: fuzz_event_msg.rs  fuzz_op.rs  fuzz_response_item.rs  fuzz_turn_item.rs
src-tauri/migrations/: 0019_mosaic_compat.sql
src-tauri/proptest-regressions/protocol/: camel_case_tests.txt
src-tauri/src/: commands.rs  e2e_smoke_tests.rs  frontend_compat_tests.rs  image_util.rs  lib.rs
src-tauri/src/auth/: mod.rs  storage.rs
src-tauri/src/config/: config_requirements.rs  constraint.rs  diagnostics.rs  edit.rs  fingerprint.rs  layer_stack.rs  merge.rs  mod.rs  overrides.rs  permissions.rs  schema.rs  service.rs  toml_types.rs
src-tauri/src/core/: agent.rs  agents.rs  analytics_client.rs  client.rs  codex.rs  compact.rs  custom_prompts.rs  event_mapping.rs  external_agent_config.rs  file_watcher.rs  git_info.rs  hooks.rs  initial_history.rs  mcp_client.rs  mcp_server.rs  message_history.rs  mod.rs  network_policy_decision.rs  patch.rs  project_doc.rs  realtime.rs  review_format.rs  review_prompts.rs  seatbelt.rs  session.rs  shell.rs  shell_snapshot.rs  skills.rs  state_db.rs  text_encoding.rs  thread_history.rs  thread_manager.rs  truncation.rs  turn_diff_tracker.rs
src-tauri/src/core/agent/: control.rs  guards.rs  mod.rs  role.rs  status.rs
src-tauri/src/core/context_manager/: history.rs  mod.rs  normalize.rs  updates.rs
src-tauri/src/core/exec_policy/: bash.rs  heuristics.rs  manager.rs  mod.rs
src-tauri/src/core/features/: legacy.rs  mod.rs
src-tauri/src/core/mcp_client/: auth.rs  connection_manager.rs  mod.rs  skill_dependencies.rs  tool_call.rs
src-tauri/src/core/memories/: citations.rs  mod.rs  phase1.rs  phase2.rs  prompts.rs  start.rs  storage.rs  usage.rs
src-tauri/src/core/models_manager/: cache.rs  collaboration_mode_presets.rs  manager.rs  mod.rs  model_info.rs  model_presets.rs
src-tauri/src/core/rollout/: error.rs  list.rs  metadata.rs  mod.rs  policy.rs  reconstruction.rs  recorder.rs  session_index.rs  truncation.rs
src-tauri/src/core/skills/: env_var_dependencies.rs  injection.rs  invocation_utils.rs  loader.rs  manager.rs  mod.rs  model.rs  permissions.rs  remote.rs  render.rs  system.rs
src-tauri/src/core/state/: mod.rs  service.rs  session.rs  turn.rs
src-tauri/src/core/tasks/: compact.rs  mod.rs  regular.rs  review.rs  undo.rs
src-tauri/src/core/tools/: context.rs  events.rs  mod.rs  network_approval.rs  orchestrator.rs  parallel.rs  router.rs  sandboxing.rs  spec.rs
src-tauri/src/core/unified_exec/: async_watcher.rs  errors.rs  head_tail_buffer.rs  mod.rs  process.rs  process_manager.rs
src-tauri/src/exec/: mod.rs  sandbox.rs
src-tauri/src/execpolicy/: amend.rs  error.rs  mod.rs  network_rule.rs  parser.rs  prefix_rule.rs
src-tauri/src/file_search/: mod.rs
src-tauri/src/mosaic_api/: auth.rs  common.rs  error.rs  mod.rs  provider.rs  rate_limits.rs  telemetry.rs
src-tauri/src/mosaic_api/endpoint/: compact.rs  memories.rs  mod.rs  models.rs  responses.rs  session.rs
src-tauri/src/mosaic_api/requests/: headers.rs  responses.rs
src-tauri/src/mosaic_api/sse/: mod.rs  responses.rs
src-tauri/src/mosaic_client/: mod.rs  request.rs  retry.rs  sse.rs  telemetry.rs  transport.rs
src-tauri/src/netproxy/: mod.rs  proxy.rs
src-tauri/src/protocol/: camel_case_tests.rs  error.rs  event.rs  items.rs  mod.rs  roundtrip_tests.rs  submission.rs  thread_id.rs  types.rs
src-tauri/src/provider/: mod.rs
src-tauri/src/pty/: mod.rs  pipe.rs  process.rs  process_group.rs  pty.rs
src-tauri/src/responses_api_proxy/: mod.rs  process_hardening.rs  read_api_key.rs
src-tauri/src/rmcp_client/: auth_status.rs  logging_client_handler.rs  mod.rs  oauth.rs  perform_oauth_login.rs  program_resolver.rs  rmcp_client.rs  utils.rs
src-tauri/src/secrets/: backend.rs  manager.rs  mod.rs  sanitizer.rs
src-tauri/src/share/: config.rs  mod.rs  oss.rs  render.rs  types.rs
src-tauri/src/shell_command/: mod.rs
src-tauri/src/shell_escalation/: mod.rs
src-tauri/src/state/: db.rs  memories_db.rs  memory.rs  migration_runner.rs  mod.rs  rollout.rs
src-tauri/src/stream_parser/: assistant_text.rs  citation.rs  inline_hidden_tag.rs  mod.rs  proposed_plan.rs  tagged_line_parser.rs  utf8_stream.rs
src-tauri/tests/: boundary_tests.rs  command_interface_tests.rs  e2e_mock_api.rs  real_api_tests.rs  rollout_policy_tests.rs  share_oss_integration.rs  tool_contract_alignment_tests.rs  tool_handler_tests.rs
src-tauri/tests/fixtures/: share-oss-upload.txt  test-rollout.jsonl
(+178 files in other folders)
