[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-channel = "2"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
sha1 = "0.10"
toml = "0.8"
thiserror = "1"
regex = "1"
sha2 = "0.10"
multimap = "0.10"
starlark = "0.12"
shlex = "1"
fs2 = "0.4"
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
eventsource-stream = "0.2"

[dev-dependencies]
proptest = "1"
wiremock = "0.6"
tempfile = "3"
insta = { version = "1", features = ["json"] }
pretty_assertions = "1"

