[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
async-channel = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
rmcp = { version = "1.1.1", default-features = false, features = ["auth", "base64", "client", "macros", "schemars", "server", "transport-child-process", "transport-streamable-http-client-reqwest", "transport-streamable-http-server"] }
oauth2 = "5"
urlencoding = "2"
webbrowser = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dunce = "1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
async-trait = "0.1"
indexmap = "2"
sha1 = "0.10"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dotenvy = "0.15"
rand = "0.9"
thiserror = "1"
regex = "1"
sha2 = "0.10"
multimap = "0.10"
starlark = "0.12"
shlex = "1"
fs2 = "0.4"
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
zip = "2"
include_dir = "0.7"
futures = "0.3"
eventsource-stream = "0.2"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
similar = "2"
ignore = "0.4"
nucleo = "0.5"
crossbeam-channel = "0.5"
socket2 = { version = "0.5", features = ["all"] }
tokio-util = { version = "0.7", features = ["rt"] }
tiny_http = "0.12"
libc = "0.2"
portable-pty = "0.9.0"
dirs = "5"
encoding_rs = "0.8"
chardetng = "0.1"
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
which = "7"
base64 = "0.22.1"
bytes = "1"
http = "1"
url = "2"
zeroize = "1"
tauri-plugin-vnidrop-share = "0.2.1"
aliyun-oss-rust-sdk = "0.2.2"

[dev-dependencies]
proptest = "1"
wiremock = "0.6"
tempfile = "3"
insta = { version = "1", features = ["json"] }
pretty_assertions = "1"
